fix:response 연결 수정 및 기타 문법오류 수정