@@ -1,18 +1,17 @@
 package com.example.b11ndboard.comment.service;
 
+import com.example.b11ndboard.comment.dto.request.CommentRequest;
+import com.example.b11ndboard.comment.dto.response.CommentResponse;
 import com.example.b11ndboard.comment.entity.Comment;
-import com.example.b11ndboard.post.entity.Post;
 import com.example.b11ndboard.comment.repository.CommentRepository;
-import com.example.b11ndboard.commentlike.dto.CommentRequestDto;
-import com.example.b11ndboard.commentlike.dto.CommentResponseDto;
 import com.example.b11ndboard.commentlike.repository.CommentLikeRepository;
+import com.example.b11ndboard.post.entity.Post;
 import com.example.b11ndboard.post.repository.PostRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,8 +26,8 @@ public class CommentService {
     //댓 등록
 
     @Transactional
-    public Long saveComment(Long boardId , CommentRequestDto dto){
-        Post post = PostRepository.findById(boardId)
+    public Long saveComment(Long postId , CommentRequest dto){
+        Post post = PostRepository.findById(postId)
                 .orElseThrow(() -> new IllegalArgumentException("해당 개시글은 존재하지 않습니다"));
 
         Comment comment = Comment.builder()
@@ -67,16 +66,17 @@ public class CommentService {
         commentRepository.delete(comment);
     }
 
-    public List<CommentResponseDto> getComments(Long boardId){
-        List<Comment> comments = commentRepository.findByPostIdOrderByCreatedAtAsc(boardId);
+    @Transactional(readOnly = true)
+    public List<CommentResponse> getComments(Long postId) {
+
+        List<Comment> comments = commentRepository.findByPostIdOrderByCreatedAtAsc(postId);
 
         return comments.stream()
                 .map(comment -> {
-                    // 각 댓글마다 DB에서 좋아요 개수를 세어 함께 DTO로 변환
-                    long likeCount = commentLikeRepository.countByCommentId(comment.getId());
-                    return new CommentResponseDto(comment, likeCount);
-                })
-                .collect(Collectors.toList());
+                    Long likecount = commentLikeRepository.countByCommentId(comment.getId());
+
+                    return new CommentResponse(comment,likecount);
+                }).toList();
     }
 
 }
